# AndroidRPA

./: .gitignore  AGENTS.md  CLAUDE.md  README.md
CPython-android/: .gitignore  README.md  build.bat
CPython-android/include/: pyconfig.h
CPython-android/python-shims/: _android_bootstrap.py  entry.py
CPython-android/python-shims/yyds/: auto_api_templates.py  auto_plus.py  console_shim.py  util.py
CPython-android/runtime/: action_parser.py  agent.py  agent_config.py  agent_executor.py  agent_skills.py  agent_tools.py  auto_engine_proxy.py  console.py  device_query.py  file_ops.py  log_manager.py  observation.py  process_guard.py  project_manager.py  prompts.py  requirements.txt  screen_capture.py  server.py  skills.json  vlm_client.py
CPython-android/scripts/: build-cpython.sh  build-ssl.sh
yyds-android/: .gitignore  AGENTS.md  build.gradle  gradle.properties
yyds-android/app/: build.gradle
yyds-android/app/release/: output-metadata.json
yyds-android/app/src/: app_proguard-rules.pro  dictionary_rules.txt
yyds-android/app/src/main/: AndroidManifest.xml
yyds-android/app/src/main/assets/: code_viewer.html
yyds-android/app/src/main/assets/autojs/: index.js
yyds-android/app/src/main/assets/python-shims/: _android_bootstrap.py  entry.py  pyengine.py  yyds_prelude.py
yyds-android/app/src/main/java/common/: BootProvider.kt  BootReceiver.kt  BootService.kt  HiddenServerManager.java  YyInputService.kt
yyds-android/app/src/main/java/image/: ColorHelper.java  ImageHelper.java  ImageRegion.java  SomAnnotator.java
yyds-android/app/src/main/java/myt/: LanguageUtil.java
yyds-android/app/src/main/java/noadb/: ScreenDecoder.java  (+2 more)
yyds-android/app/src/main/jni/: CMakeLists.txt  clipper.cpp  common.cpp  common.h  cpython_bridge.cpp  custom.cpp  image.cpp  image.h  keeper.cpp  log.h  main.cpp  main.h  ncnn_paddle_ocr.cpp  ncnn_yolov8.cpp  script_crypto.c
yyds-android/app/src/main/jni/opencv-mobile-4.5.4-android/sdk/native/jni/include/opencv2/: core.hpp  features2d.hpp  imgproc.hpp
yyds-android/app/src/main/jni/opencv-mobile-4.5.4-android/sdk/native/jni/include/opencv2/core/: core_c.h  cuda.hpp  mat.hpp  ocl.hpp  operations.hpp  persistence.hpp  traits.hpp  types_c.h  utility.hpp
yyds-android/app/src/main/jni/opencv-mobile-4.5.4-android/sdk/native/jni/include/opencv2/core/parallel/: parallel_backend.hpp
yyds-android/app/src/main/jni/opencv-mobile-4.5.4-android/sdk/native/jni/include/opencv2/video/: background_segm.hpp
yyds-android/app/src/main/jni/rootauto/: linux_input.h  main.cpp
yyds-android/app/src/main/jni/yyds/: yyds.cpp  yyds.h
yyds-android/core/: build.gradle.kts
yyds-android/magisk-module/: module.prop  service.sh
yyds-auto-mcp/: AGENTS.md  README.md  package.json
yyds-auto-mcp/src/: adb.ts  client.ts  engine-bootstrap.ts  index.ts
yyds-auto-mcp/src/tools/: agent.ts  app.ts  device.ts  file.ts  ocr.ts  pip.ts  project.ts  screen.ts  shell.ts  touch.ts  ui.ts
yyds-auto-py/: LICENSE  README.md  pyproject.toml
yyds-auto-py/yyds_auto/: __main__.py  exceptions.py  selector.py
yyds-auto-py/yyds_auto/mixins/: __init__.py  input.py  screen.py  shell.py
yyds-auto-vscode-extension/: .vscodeignore  CHANGELOG.md  LICENSE  PUBLISH_GUIDE.md  README.md  esbuild.js  package.json  publish.bat  tsconfig.json
yyds-auto-vscode-extension/resources/: ICON_NEEDED.md
yyds-auto-vscode-extension/src/: extension.ts  statusBar.ts
yyds-auto-vscode-extension/src/commands/: initProjectCommand.ts  projectCommands.ts
yyds-auto-vscode-extension/src/engine/: adbManager.ts  connector.ts  engineActivator.ts  implement.ts  logger.ts  projectServer.ts  protocol.ts
yyds-auto-vscode-extension/src/language/: completionProvider.ts  hoverProvider.ts  signatureHelpProvider.ts  yydsApiData.ts
yyds-auto-vscode-extension/src/utils/: xmlFormatter.ts  zipUtil.ts
yyds-auto-vscode-extension/src/views/: devToolView.ts  logView.ts  sidebarViews.ts  uiDesignerView.ts
yyds-con/: .gitignore  README.md
yyds-con/backend/: Cargo.toml  readme.md
yyds-con/backend/src/: config.rs  error.rs  main.rs
yyds-con/backend/src/alert/: mod.rs
yyds-con/backend/src/api/: admin.rs  agent.rs  auth.rs  control.rs  devices.rs  files.rs  ide.rs  logcat.rs  logs.rs  mod.rs  projects.rs  rpc.rs  runs.rs  scheduler.rs  stream.rs
yyds-con/backend/src/auth/: db.rs  jwt.rs  middleware.rs  mod.rs  rate_limit.rs
yyds-con/backend/src/device/: connection.rs  mod.rs  protocol.rs  registry.rs  signaling.rs
yyds-con/backend/src/scheduler/: engine.rs
yyds-con/frontend/: AGENTS.md  README.md  index.html  package.json  vite.config.ts
yyds-con/frontend/src/: App.tsx  index.css  store.ts  types.ts
yyds-con/frontend/src/__tests__/: api.test.ts  setup.ts  store.test.ts  useDevices.test.ts  useStreamConnection.test.ts
yyds-con/frontend/src/components/: CronBuilder.tsx  LanguageSwitcher.tsx  Layout.tsx  LogcatPanel.tsx
yyds-con/frontend/src/components/ide/: ApkBuilderPanel.tsx  DevToolPanel.tsx  EditorPanel.tsx  FileTreePanel.tsx  LogPanel.tsx  PipManagerPanel.tsx  ProjectInitDialog.tsx  RunToolbar.tsx  monacoSetup.ts
yyds-con/frontend/src/hooks/: useDevices.ts  useStreamConnection.ts
yyds-con/frontend/src/i18n/: en-missing.json  gen-locales.js  index.ts
yyds-con/frontend/src/pages/: AdminPanel.tsx  AgentControl.tsx  Dashboard.tsx  DevTools.tsx  DeviceDetail.tsx  Documentation.tsx  FileBrowser.tsx  IdeWorkbench.tsx  LandingPage.tsx  LogViewer.tsx  Login.tsx  MyDevices.tsx  Schedules.tsx  TaskRunDetail.tsx
yyds-con/frontend/src/services/: api.ts
yyds.-auto_-py-projcet/: README.md  main.py  project.config  ui.yml
yyds.-auto_-py-projcet/test/: __init__.py  conftest.py  device_test_main.py  run_all_tests.py  run_on_device.py  test_01_engine_connection.py  test_02_device_info.py  test_03_touch_input.py  test_04_screenshot_ocr.py  test_05_ui_automation.py  test_06_shell_app.py  test_07_file_transfer.py  test_08_color_image.py  test_09_utils_entities.py  test_10_flow_control.py  test_11_wait_apis.py  test_12_gesture_node.py  test_13_screen_device_ext.py  test_14_chinese_api.py
(+386 files in other folders)
